# chip8-emulator

./: .gitignore  CMakeLists.txt  README.md
src/: chip8.cpp  chip8.h  main.cpp
tests/: CMakeLists.txt  test_chip8.cpp
